--- a/src/Form.css
+++ b/src/Form.css
@@ -1,28 +1,5 @@
-:root {
-    --deg:0deg;
-}
 * {
     font-family: 'Ubuntu Mono', monospace;
-}
-@keyframes rotatingShadow {
-    0% {
-        --deg:0deg;
-    }
-    20% {
-        --deg:72deg;
-    }
-    40% {
-        --deg:144deg;
-    }
-    60% {
-        --deg:216deg;
-    }
-    80% {
-        --deg:288deg;
-    }
-    100% {
-        --deg:360deg;
-    }
 }
 .form-style {
     display:flex; position:relative;
@@ -31,27 +8,59 @@
     margin:0px; padding:0px;
     flex-direction:var(--direction);
     border:none; border-radius:10px;
-    /*background-image:linear-gradient(45deg, rgb(41, 121, 212), skyblue);*/
-    background-color:rgb(87, 83, 83);
+    transform-style:preserve-3d;
+    background-color:rgb(73, 63, 63);
 }
 .form-style::after {
     position:absolute;
-    width:100%; height:100%;
     content:"";
-    z-index:-1;
+    transform:translateZ(-1px);
+    inset: -0.625em;
     background-image:linear-gradient(var(--deg), red, rgb(176, 44, 233), blue);
-    animation:rotatingShadow 15s linear 0s infinite normal forwards running;
     filter:blur(10px);
 }
 .item1 {
     height:var(--item1-height); width:var(--item1-width);
-    padding:10%; margin:0px;
+    padding:2%; margin:0px;
     display:flex; flex-direction:column;
     background-color:transparent;
+    align-items:center;
+    justify-content:space-around;
+}
+.item1 > div {
+    display:block;
+    height:10%;
+}
+.item1-sub1, .item1-sub2, .item1-sub3 {
+    width:50%;
+}
+.item1-sub4 {
+    width:25%;
+}
+.page-change {
+    all:unset;
+    display:flex; align-items:center; justify-content:center;
+    width:100%;
+    background-color:white;
+    color:black;
+    border:none;
+    font-size:var(--font-size);
+    border-radius:2px;
+}
+.page-change:hover {
+    background-color:grey;
+}
+.page-change:active {
+    background-color:black;
+    color:white;
 }
 .item2 {
     display:block;
     width:var(--item2-width); height:var(--item2-height);
     padding:0px; margin:0px;
     background-color:transparent;
+    border-radius:0px 10px 10px 0px;
+}
+.item2:hover {
+    border:1px solid white;
 }
