--- a/src/FormInputs.css
+++ b/src/FormInputs.css
@@ -26,16 +26,17 @@
     position:absolute;
     display:flex;
     align-items:center; justify-content:center;
-    width:100%; height:100%;
-    top:0px;
-    background-color:transparent;
+    width:50%; height:calc(100% - 2px);
+    top:1px; left:25%;
+    background-color:var(--form-background-color);
     color:white;
     font-size:var(--font-size);
-    transition:top 500ms ease 0ms, font-size 500ms ease 0ms;
+    transition:top 500ms ease 0ms, font-size 500ms ease 0ms, left 500ms ease 0ms, width 500ms ease 0ms, height 500ms ease 0ms;
 }
 .text-input-group > input:focus + label, .text-input-group > input:not(:placeholder-shown) + label {
-    top:-50%;
-    font-size:calc(var(--font-size) - 0.5rem);
+    width:30%; left:35%;
+    height:50%; top:-25%;
+    font-size:calc(var(--font-size) - 0.2rem);
 }
 .password-input-group {
     display:flex;
@@ -61,15 +62,16 @@
 .password-input-group > label {
     position:absolute;
     display:flex; align-items:center; justify-content:center;
-    width:100%; height:100%;
-    top:0px;
-    background-color:transparent;
+    width:50%; height:calc(100% - 2px);
+    top:1px; left:25%;
+    background-color:var(--form-background-color);
     color:white;
     font-size:var(--font-size);
-    transition:top 500ms ease 0ms, font-size 500ms ease 0ms;
+    transition:top 500ms ease 0ms, font-size 500ms ease 0ms, left 500ms ease 0ms, width 500ms ease 0ms, height 500ms ease 0ms;
 }
 .password-input-group > input:focus + label, .password-input-group > input:not(:placeholder-shown) + label {
-    top:-50%;
+    width:46%; left:27%;
+    height:50%; top:-25%;
     font-size:calc(var(--font-size) - 0.2rem);
 }
 .password-input-group > button {
@@ -107,4 +109,11 @@
     color:rgb(34, 245, 199);
     text-align:center;
     line-height:normal;
+}
+.hidden-file {
+    opacity:0;
+    position:absolute;
+    width:0px; height:0px;
+    margin:0px; padding:0px;
+    z-index:-1;
 }
